# MidnightOS

./: .gitignore  CMakeLists.txt  KERNEL_DEFINITIONS.md  bochsrc.bxrc  debug.gdb  image.iso  iso.sh  limine.conf  start.bat
src/: kernel.h
src/cpu/: cpu.c  cpu.h
src/hal/: initialize_arch.c  initialize_arch.h  io.c  io.h
src/hal/gdt/: flush_gdt.asm  gdt.c  gdt.h
src/hal/idt/: idt.asm  idt.c  idt.h  interrupt_stackf.h  isr.c  raw_idt_table.c  raw_idt_table.h
src/hal/spratcher/: features.asm  features.c  features.h  spinit.c  spinit.h
src/init/: init.asm  main.c
src/kdbg/: debug_print.c  debug_print.h
src/ke/: bugcheck.c  bugcheck.h  error.c  error.h  irql.c  irql.h  stacktrace.c  stacktrace.h
src/ke/spratcher/: spinit.c  spinit.h
src/mm/: common.c  common.h  paging.h  physical.c  physical.h  virtual.c  virtual.h  vmem-allocator.c  vmem-allocator.h
src/ob/: object.c  object.h
src/rtl/: dlmalloc.c  dlmalloc.h  kcruntime.c  limine.h  linked_list.c  linked_list.h  memory.c  memory.h  runtime.h  spinlock.c  spinlock.h
src/rtl/npf/: nanoprintf.h
src/se/: descriptor.h  manager.c  manager.h
src/str/: string.c  string.h
